	- fixed this bug (in ticonv):
	sending LCHASE.8xp from 20sec.zip package failed on 
	TI84+ USB due to un-detokenization of varname (because tifiles2 don't 
	know whether file is targetted for TI84+ or TI84+ USB).
	Sending is OK, receiving is still KO because we should pass vartype 
	with named lists.
	- removed grouping/ungrouping of files from popup menu. Replaced it by
		an access to GFM.

- 10/06/2007, version 1.05 (1.0.5, 1.0.6, 1.0.6, 1.0.3): roms
	- sending of APPV variables in FLASH is not allowed; avoid this.
	- skip sending of IDlist.8xidl (pseudo-variable)
	- fixed displaying of Pic/Str/Gdb in directory listing (win32)
	- fixed displaying of Y?/r? and 't' in directory listing (win32)

- 02/04/2007, version 1.04 (1.0.5, 1.0.6, 1.0.5, 1.0.2): roms
	- cosmetic change in the name of the TiEmu virtual link
	- added KDE file dialog support (like in TiEmu)
	- fixed/improved hand-held model check
	- fixed aliasing violations in Win32 file dialog code (kevin)
	- added Ti File Properties dialog box
	- filter -s from CFLAGS/CXXFLAGS/LDFLAGS on Darwin (kevin)
	- keep link open status to avoid multiple error messages
	- fixed Win32 file dialogs not setting fname to NULL when returning NULL (kevin)
	=> released on 14/05/2007

- 23/02/2007, version 1.03 (1.0.4, 1.0.5, 1.0.4, 1.0.1): roms
	- enabled i18n
	- set home/working folder as current folder on MinGW build
	=> released on 14/03/2007.

- 17/01/2007, version 1.02 (1.0.3, 1.0.4, 1.0.3, 1.0.1): roms
	- added xdg-open in front of the list of browsers (kevin)
	- add trailing slash for directory (otherwise, dirname with spaces 
	like 'My Files' are not opened properly)
	- fixed sending of vars into archive thru the App node
	- Titanium/USB dumper is now launched remotely
	- bug #1662383: V200 replies as busy but screenshot is working anyways
	- clean-up/fixes in many tifile_is calls (some of them have been simplified,
		some others have been replaced by tifiles_file_test)