@@ -13,6 +13,8 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	with named lists.
 	- removed grouping/ungrouping of files from popup menu. Replaced it by
 		an access to GFM.
+	- fixed KDE path detection for multilib systems with both 32-bit and
+	  64-bit libraries installed (kevin)
 
 - 10/06/2007, version 1.05 (1.0.5, 1.0.6, 1.0.6, 1.0.3): roms
 	- sending of APPV variables in FLASH is not allowed; avoid this.
